<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashback1"
    tools:context=".signup">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#AA69"
        android:fitsSystemWindows="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="124dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:src="@drawable/logowhite" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#fff"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_white_24dp"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:textColor="#fff" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#fff"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#fff" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="#fff"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#fff">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#fff" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn1"
                android:text="@string/register"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/back_to_login"
                android:textColor="#0c0099" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>